--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "izimodal": "^1.5.1",
+    "jquery": "^3.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   }
